--- a/SwissArmyApp/src/main/resources/com/example/swissarmyapp/tipCalculator.fxml
+++ b/SwissArmyApp/src/main/resources/com/example/swissarmyapp/tipCalculator.fxml
@@ -3,12 +3,18 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <VBox alignment="CENTER" prefHeight="600.0" prefWidth="800.0" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.swissarmyapp.tipcalculator">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-    <TextField fx:id="money" promptText="Amount of Money" />
+   <Label text="Tip Calculator">
+      <font>
+         <Font size="45.0" />
+      </font>
+   </Label>
+    <TextField fx:id="money" minWidth="-Infinity" promptText="Amount of Money" />
     <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
         <children>
             <Button mnemonicParsing="false" onAction="#setTip10" text="10%" />
@@ -17,8 +23,6 @@
             <TextField fx:id="tip" prefHeight="26.0" prefWidth="192.0" promptText="or choose your own percentage" />
         </children>
     </HBox>
-    <Label fx:id="result" />
-
-    <Label fx:id="welcomeText" />
+    <Label fx:id="result" text="\$0.00" />
     <Button onAction="#calculateTip" text="Hello!" />
 </VBox>
